update swagger dto
