# src/main/java/com/hexagonal/notice/domain/model/UserResponse.java
@@ -1,24 +1,0 @@
-package com.hexagonal.notice.domain.model;
-
-import lombok.*;
-
-import java.time.LocalDateTime;
-
-@Data
-@Builder
-@NoArgsConstructor
-@AllArgsConstructor
-public class UserResponse {
-
-    @NonNull
-    private Long id;
-
-    @NonNull
-    private String username;
-
-    private Boolean status;
-
-    private LocalDateTime createdAt;
-
-    private LocalDateTime updatedAt;
-}
